--- a/demo/style.css
+++ b/demo/style.css
@@ -1,19 +1,43 @@
-#cy {
-    width: 90%;
-    height: 90vh;
-    border: 2px solid rgb(151, 39, 39);
-}
-.head-buttons {
-    margin: 5px;
-}
-.head-buttons button {
-    margin: 5px;
-}
-.label {
-    font-size: 1em;
-    color: #000;
-    text-shadow: 0 0 1px #fff;
-}
-.number-input{
-    width: 50px;
-}
+* {
+    box-sizing: border-box;
+  }
+  
+  /* Create two equal columns that floats next to each other */
+  .cy-column {
+    float: left;
+    width: 80%;
+  }
+  .button-column {
+    float: left;
+    width: 20%;
+  }
+  
+  .row{
+      margin-bottom: 5px;
+  }
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  #cy {
+      width: 100%;
+      height: 90vh;
+      border: 2px solid rgb(151, 39, 39);
+  }
+  .head-buttons {
+      margin: 5px;
+  }
+  .head-buttons button {
+      margin: 5px;
+  }
+  .label {
+      font-size: 1em;
+      color: #000;
+      text-shadow: 0 0 1px #fff;
+  }
+  .number-input{
+      width: 50px;
+  }
